# ZeroShotClassificationSurvey

./: .gitignore  README.md  debug_download.py  experiment_results.json  main.py  pyproject.toml  train_bagofwords.py  train_linearsvc.py  train_supervised_cnn.py  train_zsl_image.py
image/: train_gan_zsl.py  train_zsl_image.py
image_results/: final_metrics.json  final_metrics_supervised_cnn.json  final_metrics_supervised_svm.json  splits.json  splits_bow.json  splits_supervised.json  splits_supervised_svm.json  svm_artifacts.npz  train_log.jsonl  train_log_bow.jsonl  train_log_supervised_cnn.jsonl
image_results/tokenizer/: merges.txt  vocab.json
methods/: embedding.py  llm.py  nli.py  svm.py
text/: main.py
text/methods/: nb.py  nli.py
text/utils/: data.py
text/visualization-scripts/: overall_stats.py
utils/: report.py
visualization/: gan_plots.py
visualization-scripts/: overall_stats.py
